// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`06_customhook > should work with recorded events 1`] = `
"
    <div id="root"><div><span>Count: 1</span><button type="button">+1</button><button type="button">-1</button></div><div><span>Count: 1</span><button type="button">+1</button><button type="button">-1</button></div></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`06_customhook > should work with recorded events 2`] = `
"
    <div id="root"><div><span>Count: 2</span><button type="button">+1</button><button type="button">-1</button></div><div><span>Count: 2</span><button type="button">+1</button><button type="button">-1</button></div></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`06_customhook > should work with recorded events 3`] = `
"
    <div id="root"><div><span>Count: 1</span><button type="button">+1</button><button type="button">-1</button></div><div><span>Count: 1</span><button type="button">+1</button><button type="button">-1</button></div></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`06_customhook > should work with recorded events 4`] = `
"
    <div id="root"><div><span>Count: 0</span><button type="button">+1</button><button type="button">-1</button></div><div><span>Count: 0</span><button type="button">+1</button><button type="button">-1</button></div></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`06_customhook > should work with recorded events 5`] = `
"
    <div id="root"><div><span>Count: 1</span><button type="button">+1</button><button type="button">-1</button></div><div><span>Count: 1</span><button type="button">+1</button><button type="button">-1</button></div></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`06_customhook > should work with recorded events 6`] = `
"
    <div id="root"><div><span>Count: 2</span><button type="button">+1</button><button type="button">-1</button></div><div><span>Count: 2</span><button type="button">+1</button><button type="button">-1</button></div></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`06_customhook > should work with recorded events 7`] = `
"
    <div id="root"><div><span>Count: 1</span><button type="button">+1</button><button type="button">-1</button></div><div><span>Count: 1</span><button type="button">+1</button><button type="button">-1</button></div></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`06_customhook > should work with recorded events 8`] = `
"
    <div id="root"><div><span>Count: 0</span><button type="button">+1</button><button type="button">-1</button></div><div><span>Count: 0</span><button type="button">+1</button><button type="button">-1</button></div></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;
